--- a/src/css/eKitabu.css
+++ b/src/css/eKitabu.css
@@ -26,7 +26,11 @@ body {
     font-family: Open Sans, sans-serif;
     font-weight: 400;
 }
-#logos { text-align: center; position: relative; top: 10%;}
+#logos { text-align: center; position: relative;
+
+    display: table-cell;
+    vertical-align: middle;
+}
 
 .btn
 {
@@ -73,6 +77,7 @@ div.logo img { height: auto; width: 100%; }
                 rgba(255,255,255,0) 10%, 
                 rgba(255,255,255,0) 90% ,
                 rgba(255,255,255,1.0) 100%);
+ display: table;
 }
 
 .logo,.logoTop{margin:0}
@@ -149,7 +154,6 @@ ul#bookCurrentCategories li
 .addCustomCategorySection
 {
     border-top: 2px solid black;
-    border-bottom: 2px solid black;
     width: 100%;
     float:left;
     padding: 10px 0;
